Fix backend collection remove (too wide) / dropdown (mismatching border radius) css

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
@@ -53,8 +53,8 @@
 }
 
 .collectionRemove {
-  line-height: $inputHeight;
   position: absolute;
-  right: -1em;
+  right: -0.75em;
+  line-height: 2;
   z-index: 1;
 }
